--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -14,7 +14,10 @@
 		
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+
 		<script src ="generated/mainComponent.js"></script>
+		
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-confirmation/1.0.5/bootstrap-confirmation.js"></script>
 	</div>
 </div>
 </body>
